fix bug showing gap at bottom of screenshots

--- a/themes/simple_bootstrap/static/css/style.scss
+++ b/themes/simple_bootstrap/static/css/style.scss
@@ -58,7 +58,7 @@ section {
 
 // size of screen: width=1086 with offset left/top=67/53
 .device-wrapper-m > img {
-  width: 273px; 
+  width: 275px; 
   margin-left: 16px; 
   margin-top: 13px; 
   border-radius: 18px;
